--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class = "side-bar">
             <div class="slide-container">
                 <strong>Grid Size:</strong> <br>
-                <input type="range" min="1" max="100" value="50" class="slider" oninput="this.nextElementSibling.value = this.value"> <output>50</output>
+                <input type="range" min="1" max="100" value="50" id="slider"> 
+                <output id="output">50</output>
             </div>    
             
             <div class="button-container">
