--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class = "side-bar">
             <div class="slide-container">
                 <strong>Grid Size:</strong> <br>
-                <input type="range" min="1" max="100" value="50" id="slider"> 
-                <output id="output">50</output>
+                <input type="range" min="1" max="100" value="16" id="slider"> 
+                <output id="output">16 x 16</output>
             </div>    
             
             <div class="button-container">
@@ -27,7 +27,7 @@
         </div>
 
         <div class = "workspace-container">
-            <div class = "grid"></div>
+            <div class = "grid-container"></div>
         </div>
     </div>
 </body>
