WIP: Complete black and random colour button Clean up JS code Add usage instruction

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>ETCH-A-SKETCH</h1>
+    <div class = "header-container">
+    <div> 1) Select grid size</div>   
+    <div> 2) Select ink colour</div>   
+    <div> 3) Have fun sketching</div>   
+    </div>
+
     <div class = "container"> 
         
         <div class = "side-bar">
@@ -17,7 +23,7 @@
             </div>    
             
             <div class="button-container">
-                <strong>Sketch Colour: </strong> <br>
+                <strong>Ink Colour: </strong> <br>
                 <input type="button" id="black" value="Black">
                 <input type="button" id="random" value="Random"> 
                 <input type="button" id="rgb" value="Color Wheel"> <br>
