--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class = "side-bar">
             <div class="slide-container">
                 <strong>Grid Size:</strong> <br>
-                <input type="range" min="1" max="100" value="16" id="slider"> 
+                <input type="range" min="16" max="50" value="16" id="slider"> 
                 <output id="output">16 x 16</output>
             </div>    
             
@@ -26,7 +26,9 @@
                 <strong>Ink Colour: </strong> <br>
                 <input type="button" id="black" value="Black">
                 <input type="button" id="random" value="Random"> 
-                <input type="button" id="rgb" value="Color Wheel"> <br>
+                <br>
+                <br>
+                <strong> Grid Functions: </strong> <br>
                 <input type="button" id="eraser" value="Eraser">
                 <input type="button" id="clear" value="Clear">
             </div>   
