Add colour picker

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <div class="button-container">
                 <strong>Ink Colour: </strong> <br>
                 <input type="button" id="black" value="Black">
-                <input type="button" id="random" value="Random"> 
+                <input type="button" id="random" value="Random">
+                <br> 
+                <label for="color"> <em>Colour Picker:</em> </label>
+                <input type="color" id="color-picker">
                 <br>
                 <br>
                 <strong> Grid Functions: </strong> <br>
